--- a/index.html
+++ b/index.html
@@ -11,37 +11,21 @@
         h1 { font-size: 3rem; margin-bottom: 10px; color: #38bdf8; }
         p { font-size: 1.2rem; color: #94a3b8; max-width: 600px; margin: 0 20px 30px; }
         .nav-buttons { display: flex; gap: 20px; flex-wrap: wrap; justify-content: center; }
-        .btn { padding: 15px 35px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; transition: 0.3s; display: flex; align-items: center; gap: 10px; }
+        .btn { padding: 15px 35px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; transition: 0.3s; display: flex; align-items: center; gap: 10px; cursor: pointer; }
         .btn-primary { background: #38bdf8; color: #0f172a; }
-        .btn-primary:hover { background: #7dd3fc; transform: scale(1.05); }
         .btn-outline { border: 2px solid #38bdf8; color: #38bdf8; }
-        .btn-outline:hover { background: rgba(56, 189, 248, 0.1); }
-        .stats { margin-top: 50px; display: flex; gap: 40px; color: #64748b; }
-        .stat-item b { color: white; display: block; font-size: 1.5rem; }
+        .btn:hover { transform: scale(1.05); filter: brightness(1.1); }
     </style>
 </head>
 <body>
-
     <div class="hero">
         <i class="fas fa-bolt" style="font-size: 4rem; color: #fbbf24; margin-bottom: 20px;"></i>
         <h1>أهلاً بك في عالم البرق ⚡</h1>
-        <p>منصتك المتكاملة لتحميل أحدث التطبيقات، قراءة الشروحات التقنية، ومتابعة كل جديد في عالم الأندرويد.</p>
-        
+        <p>منصتك المتكاملة لتحميل التطبيقات ومتابعة الشروحات التقنية.</p>
         <div class="nav-buttons">
-            <a href="a.html" class="btn btn-primary">
-                <i class="fas fa-store"></i> دخول المتجر
-            </a>
-            <a href="#" class="btn btn-outline">
-                <i class="fas fa-book"></i> مدونة الشروحات
-            </a>
-        </div>
-
-        <div class="stats">
-            <div class="stat-item"><b>+50</b> تطبيق</div>
-            <div class="stat-item"><b>+1k</b> تحميل</div>
-            <div class="stat-item"><b>24/7</b> دعم</div>
+            <a href="a.html" class="btn btn-primary"><i class="fas fa-store"></i> دخول المتجر</a>
+            <a href="blog.html" class="btn btn-outline"><i class="fas fa-blog"></i> مدونة الأخبار</a>
         </div>
     </div>
-
 </body>
 </html>
