--- a/index.html
+++ b/index.html
@@ -62,15 +62,14 @@
         <h1>أهلاً بك في عالم البرق ⚡</h1>
         <p>منصتك المتكاملة لتحميل التطبيقات ومتابعة الشروحات التقنية.</p>
         
-        <div class="visitor-counter">
-            <i class="fas fa-eye"></i> إجمالي الزيارات: <span id="count">...</span>
-        </div>
 
         <div class="nav-buttons">
             <a href="a.html" class="btn btn-primary"><i class="fas fa-store"></i> دخول المتجر</a>
             <a href="blog.html" class="btn btn-outline"><i class="fas fa-blog"></i> مدونة الأخبار</a>
         </div>
-
+           <div class="visitor-counter">
+            <i class="fas fa-eye"></i>  الزيارات: <span id="count">...</span>
+           </div>
         <div class="social-footer">
             <a href="https://www.facebook.com/share/15vdauhHu1/" target="_blank" class="social-btn fb"><i class="fab fa-facebook-f"></i></a>
             <a href="https://wa.me/967777847815" target="_blank" class="social-btn wa"><i class="fab fa-whatsapp"></i></a>
